# my_geoloc

./: .gitignore  package.json  readme.md
api-mygeoloc/: alembic.ini  pyproject.toml
api-mygeoloc/api_mygeoloc/: __init__.py  auth.py  db.py  models.py  oauthy.py
api-mygeoloc/api_mygeoloc/templates/: signup.html
api-mygeoloc/migrations/versions/: 05c79710bec8_create_table_user_et_user_sessions.py  addf3d1fdc25_create_table_locations.py
front-mygeoloc/: package.json
