[tool.poetry]
name = "api-mygeoloc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_mygeoloc"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
flask = "^2.3.2"
flask-login = "^0.6.2"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
